[project]
name = "m65lstm"
version = "0.1.0"
description = "Iron Ore Log Return Forecasting with LSTM"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "torch",
    "pyyaml",
    "matplotlib",
    "pydantic",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "scikit-learn-stubs>=0.0.3",
]
