[project]
name = "m65lstm"
version = "0.1.0"
description = "Iron Ore Log Return Forecasting with LSTM"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "torch",
    "pyyaml",
    "matplotlib",
    "pydantic",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "psutil>=7.0.0,<8.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "scikit-learn-stubs>=0.0.3",
    "scipy>=1.16.1",
    "types-psutil>=7.0.0,<8.0.0",
    "types-pyyaml>=6.0.12.20250822",
    "types-seaborn>=0.13.2.20250809",
]
